# discord_bot

./: .gitignore  README.md  README.rst  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
mybot/: cogfile.py  discord_bot.py
scraping/: items.py  pipelines.py  settings.py
scraping/spiders/: images.py
tests/: test_mybot.py
